<resources>
    <string name="app_name">SamCollection</string>
    <string name="main_jetpack">Jetpack</string>

    <string name="basic_usage">Basic Usage</string>

    <string-array name="jetpack_top">
        <item>@string/jetpack_top_foundation</item>
        <item>@string/jetpack_top_architecture</item>
        <item>@string/jetpack_top_behavior</item>
        <item>@string/jetpack_top_ui</item>
    </string-array>
    <string name="jetpack_top_foundation">Foundation</string>
    <string name="jetpack_top_architecture">Architecture</string>
    <string name="jetpack_top_behavior">Behavior</string>
    <string name="jetpack_top_ui">UI</string>

    <string-array name="jetpack_arch">
        <item>@string/jetpack_databinding</item>
        <item>@string/jetpack_arch_livedata</item>
        <item>@string/jetpack_arch_viewmodel</item>
        <item>@string/jetpack_arch_room</item>
    </string-array>
    <string name="jetpack_databinding">Databinding</string>
    <string name="jetpack_arch_livedata">LiveData</string>
    <string name="jetpack_arch_viewmodel">ViewModel</string>
    <string name="jetpack_arch_room">Room</string>

    <string-array name="jetpack_databinding">
        <item>@string/jetpack_databinding_basic</item>
        <item>@string/jetpack_databinding_twoway</item>
    </string-array>
    <string name="jetpack_databinding_basic">Basic usage</string>
    <string name="jetpack_databinding_twoway">Two-way binding</string>

    <string-array name="jetpack_viewmodel">
        <item>@string/basic_usage</item>
        <item>@string/jetpack_viewmodel_scope</item>
    </string-array>
    <string name="jetpack_viewmodel_scope">ViewModel Scope(ktx)</string>

    <string-array name="jetpack_room">
        <item>@string/basic_usage</item>
    </string-array>

    <string-array name="jetpack_ui">
        <item>@string/jetpack_ui_palette</item>
    </string-array>
    <string name="jetpack_ui_palette">Palette</string>
    <string name="vibrant_color">Vibrant color</string>
    <string name="dominant_color">Dominant color</string>
    <string name="lightVibrant_color">LightVibrant color</string>
    <string name="lightMuted_color">LightMuted color</string>
    <string name="darkVibrant_color">DarkVibrant color</string>
    <string name="darkMuted_color">DarkMuted color</string>

    <string name="input_name">Input name</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="done">Done</string>


</resources>
