<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/moke"
                android:importantForAccessibility="no"
            />
            <TextView
                android:id="@+id/label_vibrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/image"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/vibrant_color"/>
            <View
                android:id="@+id/vibrant_view"
                android:layout_width="0dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@+id/label_vibrant"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
            />
            <TextView
                android:id="@+id/label_dominant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/vibrant_view"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/dominant_color"/>
            <View
                android:id="@+id/dominant_view"
                android:layout_width="0dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@+id/label_dominant"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
            />
            <TextView
                android:id="@+id/label_lightVibrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/dominant_view"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/lightVibrant_color"/>
            <View
                android:id="@+id/lightVibrant_view"
                android:layout_width="0dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@+id/label_lightVibrant"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
            />
            <TextView
                android:id="@+id/label_lightMuted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lightVibrant_view"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/lightMuted_color"/>
            <View
                android:id="@+id/lightMuted_view"
                android:layout_width="0dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@+id/label_lightMuted"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
            />
            <TextView
                android:id="@+id/label_darkVibrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lightMuted_view"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/darkVibrant_color"/>
            <View
                android:id="@+id/darkVibrant_view"
                android:layout_width="0dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@+id/label_darkVibrant"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
            />
            <TextView
                android:id="@+id/label_darkMuted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/darkVibrant_view"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/lightVibrant_color"/>
            <View
                android:id="@+id/darkMuted_view"
                android:layout_width="0dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@+id/label_darkMuted"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
